SIMPLEX-139 Refactor.